--- a/deploy/kubernetes/helm/xmidt-cloud/values.yaml
+++ b/deploy/kubernetes/helm/xmidt-cloud/values.yaml
@@ -10,22 +10,22 @@ simulator:
 
 caduceus:
   caduceus:
-    image: xmidt/caduceus:0.2.1
+    image: xmidt/caduceus:0.10
 
 scytale:
   scytale:
-    image: xmidt/scytale:0.1.5
+    image: xmidt/scytale:0.13
     fanout:
       endpoints: ["http://petasos:6400/api/v2/device/send"]
 
 petasos:
   petasos:
-    image: xmidt/petasos:0.1.4
+    image: xmidt/petasos:latest
 
 talaria:
   talaria:
-    image: xmidt/talaria:0.1.3
+    image: xmidt/talaria:latest
 
 tr1d1um:
   tr1d1um:
-    image: xmidt/tr1d1um:0.1.5
+    image: xmidt/tr1d1um:latest
